@@ -67,6 +67,6 @@ public interface HostProvider {
      * @param currentHost the host to which this client is currently connected
      * @return true if changing connections is necessary for load-balancing, false otherwise  
      */
-	boolean updateServerList(Collection<InetSocketAddress> serverAddresses, InetSocketAddress currentHost)
-			throws UnknownHostException;
+    boolean updateServerList(Collection<InetSocketAddress> serverAddresses,
+        InetSocketAddress currentHost);
 }
